hiding some older information

--- a/cfp.html
+++ b/cfp.html
@@ -11,8 +11,8 @@ slide_id: 2
             <p>{{site.data.cfp.description}}.</p>
 
             <p>
-                You are requested to submit your research paper using the {{site.data.submission.portal}}:
-                <a href="{{site.data.submission.url}}">{{site.data.submission.url}}</a>.
+                <!-- You are requested to submit your research paper using the {{site.data.submission.portal}}:
+                <a href="{{site.data.submission.url}}">{{site.data.submission.url}}</a>. -->
             </p>
             <p>
                 The submissions must conform to the <a href="{{site.data.cfp.submission}}">Submission Guidelines</a>.
