--- a/cfp.html
+++ b/cfp.html
@@ -15,7 +15,7 @@ slide_id: 2
                 <a href="{{site.data.submission.url}}">{{site.data.submission.url}}</a>.
             </p>
  -->            <p>
-                The submissions must conform to the <a href="{{site.data.cfp.submission}}">Submission Guidelines</a>.
+                To submit your paper follow this <a href="{{site.data.cfp.submission}}">submission link</a>.
             </p>
         </div>
 
