added accepted papers

--- a/accepted.html
+++ b/accepted.html
@@ -38,6 +38,19 @@ slide_id: 7
     <h6 class="text-info">Accepted Papers</h6>
     <ul>
         <li>
+            <span class="paper-title">Comparing finite many-valued logics via WSkS</span> -
+            <span class="authors">Sergio Marcelino</span>
+        </li><li>
+            <span class="paper-title">goLoop: SMT-Based Loop Analysis via Global Optimization</span> -
+            <span class="authors">Markus Krahl, Matthias Güdemann, Stefan Wallentowitz</span>
+        </li><li>
+            <span class="paper-title">Probabilistic Relation-Changing Operators</span> -
+            <span class="authors">Daniel Figueiredo, Manuel Martins, Raul Fervari</span>
+        </li><li>
+            <span class="paper-title">Reconfigurable stochastic multi-formalism models: an approach based on Maude</span> -
+            <span class="authors">Lorenzo Capra, Marco Gribaudo</span>
+        </li>
+<!--         <li>
             <span class="paper-title">Binders for switch graphs specification</span> - 
             <span class="authors">Daniel Figueiredo and Alexandre Madeira</span>
         </li>
@@ -57,29 +70,22 @@ slide_id: 7
             <span class="paper-title">Higher-order arrows for Path-Dependent Many-Valued Systems</span> - 
             <span class="authors">Sérgio Marcelino</span>
         </li>
-    </ul>
+ -->    </ul>
 
     <h6 class="text-info">Short Papers</h6>
     <ul>
         <li>
-            <span class="paper-title">Pivotal Rules Consequence in Action Model Logic</span> - 
-            <span class="authors">Valentin Cassano and Sabine Frittella</span>
-        </li>
-        <li>
-            <span class="paper-title">Reconfiguring staggered quantum walks with ZX</span> - 
-            <span class="authors">Bruno Jardim, Jaime Santos and Luís Soares Barbosa</span>
-        </li>
-        <li>
-            <span class="paper-title">Paraconsistent Reactive Graphs</span> - 
-            <span class="authors">Juliana Cunha, Alexandre Madeira and Luís Soares Barbosa</span>
-        </li>
-        <li>
-            <span class="paper-title">Many-logic Modal Structures Based on the Lattice L6: A First Look </span> - 
-            <span class="authors">Abilio Rodrigues Filho, Marcelo Coniglio and Alfredo Freire</span>
-        </li>
-        <li>
-            <span class="paper-title">A new fuzzy approach to transition and bisimulation systems</span> - 
-            <span class="authors">Benjamin Bedregal and Claudio Callejas</span>
+            <span class="paper-title">A Haskell encoding for reconfigurable timed systems</span> -
+            <span class="authors">Antonio Castro Iglesias, Alexandre Madeira, Manuel Martins</span>
+        </li><li>
+            <span class="paper-title">Reasoning about blurred observations of program states: A recipe</span> -
+            <span class="authors">Manisha Jain, Alexandre Madeira, Luís  Barbosa</span>
+        </li><li>
+            <span class="paper-title">Four-valued logics of indicative conditionals</span> -
+            <span class="authors">Miguel Muñoz Pérez</span>
+        </li><li>
+            <span class="paper-title">Dynamic Fuzzy Language for Label Fuzzy Reactive Graphs</span> -
+            <span class="authors">Suene Duarte, Daniel Figueiredo, Manuel Martins, Regivan Santiago</span>
         </li>
     </ul>
 </body>
