added tentative program and registration info

--- a/program.html
+++ b/program.html
@@ -37,112 +37,66 @@ slide_id: 4
 </head>
 <body>
 
-    <h6> <a href="https://drive.google.com/file/d/15h03jbHLptbDjOkeVrsaCYointsiMMl3/view?usp=sharing">Booklet of Constributions.</a></h6>
+    <!-- <h6> <a href="https://drive.google.com/file/d/15h03jbHLptbDjOkeVrsaCYointsiMMl3/view?usp=sharing">Booklet of Constributions.</a></h6> -->
 
 
-    <h5>November 4-5, 2024</h5>
-
-    <div class="day-schedule">
-        <h6 class="text-info">Day 1: November 4 (afternoon)</h6>
-        <div class="session">
-            <span class="time">12:30 - 13:50</span>: <b>Lunch.</b>
-        </div>
-        <div class="session">
-            <span class="time">13:50 - 14:00</span>: <b>Welcome</b>.
-        </div>
-        <div class="session">
-            <span class="time">14:00 - 15:00</span>: <i><b>Invited talk:</b></i> Carlos Areces. <i>"Axiomatizing Dynamic Logics without Substitution".</i>
-        </div>
-        <div class="session">
-            <span class="time">15:00 - 15:30</span>: Bogdan Aman and Gabriel Ciobanu. 
-            <i>"Behavioural Equivalences over Reconfigurable Systems".</i>
-        </div>
-        <div class="session">
-            <span class="time">15:30 - 15:50</span>: Abilio Rodrigues Filho, Marcelo Coniglio and Alfredo Freire.
-            <i>"Many-logic Modal Structures Based on the Lattice L6: A First Look".</i>
-        </div>
-        <div class="session">
-            <span class="time">15:50 - 16:10</span>: Antonio Iglésias. 
-            <i>"Introducing Multi-Actions Timed Reactive Graphs".</i>
-        </div>
-        <div class="session">
-            <span class="time">16:10 - 16:30</span>: <b>Coffee break.</b>
-        </div>
-        <div class="session">
-            <span class="time">16:30 - 16:50</span>: Valentin Cassano and Sabine Frittella.
-            <i>"Pivotal Rules Consequence in Action Model Logic".</i>
-        </div>
-        <div class="session">
-            <span class="time">16:50 - 17:10</span>: Ikechi Osondu.	
-            <i>"Modelling Data Engineering pipelines for a heterogeneous use case".</i>
-        </div>
-        <div class="session">
-            <span class="time">20:00 - 22:00</span>: <b>Workshop Dinner.</b>
-        </div>
-    </div>
-
+    <h5>Preliminary program</h5>
     
     <div class="day-schedule">
-        <h6 class="text-info">Day 2: November 5 (morning)</h6>
+        <h6 class="text-info">Morning</h6>
         <div class="session">
-            <span class="time">9:00 - 10:00</span>: <i><b>Invited talk:</b></i> Johan van Benthem. <i>"Graph Games and Dynamic Logics".</i>
+            <span class="time">10:00</span>: <i><b>Invited talk:</b></i> Alessandra Palmigiano <i>"TBD"</i>
         </div>
         <div class="session">
-            <span class="time">10:00 - 10:30</span>: John Lindqvist, Fernando R. Velázquez-Quesada and Thomas Ågotnes.	
-            <i>"Towards resolving distributed beliefs".</i>
+            <span class="time">11:00</span>: <b>Coffee break.</b>
         </div>
         <div class="session">
-            <span class="time">10:30 - 11:00</span>: <b>Coffee break.</b>
+            <span class="time">11:30</span>: Daniel Figueiredo, Manuel Martins, Raul Fervari.
+            <i>"Probabilistic Relation-Changing Operators".</i>
         </div>
         <div class="session">
-            <span class="time">11:00 - 11:30</span>: Raul Fervari and Benjamin Icard. 
-            <i>"Arbitrary Radical Upgrades".</i>
+            <span class="time">12:00</span>: Lorenzo Capra, Marco Gribaudo.
+            <i>"Reconfigurable stochastic multi-formalism models: an approach based on Maude".</i>
         </div>
         <div class="session">
-            <span class="time">11:30 - 11:50</span>:  Bruno Jardim, Jaime Santos and Luís Soares Barbosa. 
-            <i>"Reconfiguring staggered quantum walks with ZX".</i>
-        </div>
- 
-        <div class="session">
-            <span class="time">11:50 - 12:10</span>: Benjamin Bedregal and Claudio Callejas.
-            <i>"A new fuzzy approach to transition and bisimulation systems".</i>
+            <span class="time">12:30</span>: Markus Krahl, Matthias Güdemann, Stefan Wallentowitz.
+            <i>"goLoop: SMT-Based Loop Analysis via Global Optimization".</i>
         </div>
         <div class="session">
-            <span class="time">12:10 - 12:30</span>: Carlos Areces, Raul Fervari, Andrés R. Saravia and Fernando R. Velázquez-Quesada.
-            <i>"A Novel Way of Updating Knowing How".</i>
-        </div>
-        <div class="session">
-            <span class="time">12:30 - 14:00</span>: <b>Lunch.</b>
+            <span class="time">13:00</span>: <b>Lunch.</b>
         </div>
     </div>
 
     <div class="day-schedule">
-        <h6 class="text-info">Day 2: November 5 (afternoon)</h6>
+        <h6 class="text-info">Afternoon</h6>
         <div class="session">
-            <span class="time">14:00 - 15:00</span>: <b><i>Invited talk:</b></i> Sérgio Marcelino. <i>"Logics for path-dependent systems: from reactive to switch frames and beyond".</i>
+            <span class="time">15:00</span>: <b><i>Invited talk:</b></i>Amanda Vidal. <i>"Logics for path-dependent systems: from reactive to switch frames and beyond".</i>
         </div>
         <div class="session">
-            <span class="time">15:00 - 15:30</span>: Daniel Figueiredo and Alexandre Madeira.
-            <i>"Binders for switch graphs specification".</i>
+            <span class="time">16:00</span>: Sergio Marcelino.
+            <i>"Comparing finite many-valued logics via WSkS".</i>
         </div>
         <div class="session">
-            <span class="time">15:30 - 15:50</span>: Juliana Cunha, Alexandre Madeira and Luís Soares Barbosa.	
-            <i>"Paraconsistent Reactive Graphs".</i>
+            <span class="time">16:30</span>: <b>Coffee break.</b>
         </div>
         <div class="session">
-            <span class="time">15:50 - 16:30</span>: <b>Coffee break.</b>
+            <span class="time">17:00</span>: Muñoz Miguel Pérez.
+            <i>"Four-valued logics of indicative conditionals".</i>
         </div>
         <div class="session">
-            <span class="time">16:30 - 17:00</span>: Sérgio Marcelino.
-            <i>"Higher-order arrows for Path-Dependent Many-Valued Systems".</i>
+            <span class="time">17:20</span>: Suene Duarte, Daniel Figueiredo, Manuel Martins, Regivan Santiago.
+            <i>"Dynamic Fuzzy Language for Label Fuzzy Reactive Graphs".</i>
         </div>
         <div class="session">
-            <span class="time">17:00 - 17:20</span>: David Tinoco, Alexandre Madeira and José Proença. 
-            <i>"On the specification of labelled reactive graphs in Marge".</i>
+            <span class="time">17:40</span>: Manisha Jain, Alexandre Madeira, Luís Barbosa.
+            <i>"Reasoning about blurred observations of program states: A recipe".</i>
         </div>
         <div class="session">
-            <span class="time">17:20 - 17:40</span>: Suene Duarte, Regivan Santiago and Daniel Figueiredo.
-            <i>"Homomorphisms between Reversal Fuzzy Reactive Graphs".</i>
+            <span class="time">18:00</span>: Antonio Castro Iglesias, Alexandre Madeira, Manuel Martins.
+            <i>"A HASKELL encoding for reconfigurable timed systems".</i>
+        </div>
+        <div class="session">
+            <span class="time">18:20</span>: Closing
         </div>
     </div>
 
