--- a/program.html
+++ b/program.html
@@ -41,11 +41,16 @@ slide_id: 4
 
 
     <h5>Preliminary program</h5>
+
+    All talks will take place 
     
     <div class="day-schedule">
         <h6 class="text-info">Morning</h6>
         <div class="session">
-            <span class="time">10:00</span>: <i><b>Invited talk:</b></i> Alessandra Palmigiano <i>"TBD"</i>
+            <span class="time">9:30</span>: <i><b>Registration;</b></i>in front of <i>"Sala de música"</i> (San Pedro Mártir Building).
+        </div>
+        <div class="session">
+            <span class="time">10:00</span>: <i><b>Invited talk:</b></i> Amanda Vidal. <i>"TBD"</i>
         </div>
         <div class="session">
             <span class="time">11:00</span>: <b>Coffee break.</b>
@@ -63,14 +68,14 @@ slide_id: 4
             <i>"goLoop: SMT-Based Loop Analysis via Global Optimization".</i>
         </div>
         <div class="session">
-            <span class="time">13:00</span>: <b>Lunch.</b>
+            <span class="time">13:00</span>: <b>Lunch;</b> in <i>La Fábrica de Harinas</i> - 10 min walk (<a href="https://www.hotelsanjuandelosreyes.com/es/la-fabrica-de-harinas">link<a>).
         </div>
     </div>
 
     <div class="day-schedule">
         <h6 class="text-info">Afternoon</h6>
         <div class="session">
-            <span class="time">15:00</span>: <b><i>Invited talk:</b></i>Amanda Vidal. <i>"Logics for path-dependent systems: from reactive to switch frames and beyond".</i>
+            <span class="time">15:00</span>: <b><i>Invited talk:</b></i>Alessandra Palmigiano. <i> TBD</i>
         </div>
         <div class="session">
             <span class="time">16:00</span>: Sergio Marcelino.
@@ -97,6 +102,10 @@ slide_id: 4
         </div>
         <div class="session">
             <span class="time">18:20</span>: Closing
+        </div>
+        <div class="session">
+            <span class="time">20:30</span>: <b>Workshop dinner</b>;
+            in <i>Hacienda del Cardenal</i> - in the city center (<a href="https://www.haciendadelcardenal.com/">link<a>).
         </div>
     </div>
 
