updated program - added room

--- a/program.html
+++ b/program.html
@@ -42,12 +42,12 @@ slide_id: 4
 
     <h5>Preliminary program</h5>
 
-    All talks will take place 
+    All talks will take place in <b>Room 1.0.7 (Madre de Dios Building of <a href="https://maps.app.goo.gl/EJNegwk8qtyRpMcc8">UCML</a>)</b>.
     
     <div class="day-schedule">
         <h6 class="text-info">Morning</h6>
         <div class="session">
-            <span class="time">9:30</span>: <i><b>Registration;</b></i>in front of <i>"Sala de música"</i> (San Pedro Mártir Building).
+            <span class="time">9:30</span>: <i><b>Registration:</b> </i>in front of <i>"Sala de música"</i> (San Pedro Mártir Building).
         </div>
         <div class="session">
             <span class="time">10:00</span>: <i><b>Invited talk:</b></i> Amanda Vidal. <i>"TBD"</i>
@@ -68,7 +68,7 @@ slide_id: 4
             <i>"goLoop: SMT-Based Loop Analysis via Global Optimization".</i>
         </div>
         <div class="session">
-            <span class="time">13:00</span>: <b>Lunch;</b> in <i>La Fábrica de Harinas</i> - 10 min walk (<a href="https://www.hotelsanjuandelosreyes.com/es/la-fabrica-de-harinas">link<a>).
+            <span class="time">13:00</span>: <b>Lunch:</b> in <i>La Fábrica de Harinas</i> - 10 min walk (<a href="https://www.hotelsanjuandelosreyes.com/es/la-fabrica-de-harinas">link<a>).
         </div>
     </div>
 
@@ -104,7 +104,7 @@ slide_id: 4
             <span class="time">18:20</span>: Closing
         </div>
         <div class="session">
-            <span class="time">20:30</span>: <b>Workshop dinner</b>;
+            <span class="time">20:30</span>: <b>Workshop dinner</b>:
             in <i>Hacienda del Cardenal</i> - in the city center (<a href="https://www.haciendadelcardenal.com/">link<a>).
         </div>
     </div>
