title of Alessandra's talk

--- a/program.html
+++ b/program.html
@@ -75,7 +75,7 @@ slide_id: 4
     <div class="day-schedule">
         <h6 class="text-info">Afternoon</h6>
         <div class="session">
-            <span class="time">15:00</span>: <b><i>Invited talk:</b></i>Alessandra Palmigiano. <i> TBD</i>
+            <span class="time">15:00</span>: <b><i>Invited talk:</b></i>Alessandra Palmigiano. <i>Categories & categorization</i>
         </div>
         <div class="session">
             <span class="time">16:00</span>: Sergio Marcelino.
