added invited speakers

--- a/program.html
+++ b/program.html
@@ -4,12 +4,7 @@ layout: page
 slide_id: 4
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.7">
-    <style>
+<style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
@@ -33,84 +28,159 @@ slide_id: 4
             font-weight: bold;
             color: #0056b3;
         }
-    </style>
-</head>
-<body>
+        .card-block a {
+            color: #509e93;
+        }
+</style>
 
     <!-- <h6> <a href="https://drive.google.com/file/d/15h03jbHLptbDjOkeVrsaCYointsiMMl3/view?usp=sharing">Booklet of Constributions.</a></h6> -->
 
 
-    <h5>Preliminary program</h5>
+<h5>Preliminary program</h5>
 
-    All talks will take place in <b>Room 1.0.7 (Madre de Dios Building of <a href="https://maps.app.goo.gl/EJNegwk8qtyRpMcc8">UCML</a>)</b>.
-    
-    <div class="day-schedule">
-        <h6 class="text-info">Morning</h6>
-        <div class="session">
-            <span class="time">9:30</span>: <i><b>Registration:</b> </i>in front of <i>"Sala de música"</i> (San Pedro Mártir Building).
-        </div>
-        <div class="session">
-            <span class="time">10:00</span>: <i><b>Invited talk:</b></i> Amanda Vidal. <i>"TBD"</i>
-        </div>
-        <div class="session">
-            <span class="time">11:00</span>: <b>Coffee break.</b>
-        </div>
-        <div class="session">
-            <span class="time">11:30</span>: Daniel Figueiredo, Manuel Martins, Raul Fervari.
-            <i>"Probabilistic Relation-Changing Operators".</i>
-        </div>
-        <div class="session">
-            <span class="time">12:00</span>: Lorenzo Capra, Marco Gribaudo.
-            <i>"Reconfigurable stochastic multi-formalism models: an approach based on Maude".</i>
-        </div>
-        <div class="session">
-            <span class="time">12:30</span>: Markus Krahl, Matthias Güdemann, Stefan Wallentowitz.
-            <i>"goLoop: SMT-Based Loop Analysis via Global Optimization".</i>
-        </div>
-        <div class="session">
-            <span class="time">13:00</span>: <b>Lunch:</b> in <i>La Fábrica de Harinas</i> - 10 min walk (<a href="https://www.hotelsanjuandelosreyes.com/es/la-fabrica-de-harinas">link<a>).
+All talks will take place in <b>Room 1.0.7 (Madre de Dios Building of <a href="https://maps.app.goo.gl/EJNegwk8qtyRpMcc8">UCML</a>)</b>.
+
+
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <div class="card">
+            <div class="card-header text-white bg-dark"><strong>Morning</strong></div>
+            <div class="card-block bg-light committee">
+                    <div class="session">
+                        <span class="time">9:30</span>: <i><b>Registration:</b> </i>in front of <i>"Sala de música"</i> (San Pedro Mártir Building).
+                    </div>
+                    <div class="session">
+                        <span class="time">10:00</span>: <i><b>Invited talk:</b></i> Amanda Vidal. <i><a href="/2025/invited-talks#amandavidal">Between Necessity and Vagueness: Decidability in Modal Many-Valued Logics</a></i>
+                    </div>
+                    <div class="session">
+                        <span class="time">11:00</span>: <b>Coffee break.</b>
+                    </div>
+                    <div class="session">
+                        <span class="time">11:30</span>: Daniel Figueiredo, Manuel Martins, Raul Fervari.
+                        <i>"Probabilistic Relation-Changing Operators".</i>
+                    </div>
+                    <div class="session">
+                        <span class="time">12:00</span>: Lorenzo Capra, Marco Gribaudo.
+                        <i>"Reconfigurable stochastic multi-formalism models: an approach based on Maude".</i>
+                    </div>
+                    <div class="session">
+                        <span class="time">12:30</span>: Markus Krahl, Matthias Güdemann, Stefan Wallentowitz.
+                        <i>"goLoop: SMT-Based Loop Analysis via Global Optimization".</i>
+                    </div>
+                    <div class="session">
+                        <span class="time">13:00</span>: <b>Lunch:</b> in <i>La Fábrica de Harinas</i> - 10 min walk (<a href="https://www.hotelsanjuandelosreyes.com/es/la-fabrica-de-harinas">link<a>).
+                    </div>
+            </div>
         </div>
     </div>
 
-    <div class="day-schedule">
-        <h6 class="text-info">Afternoon</h6>
-        <div class="session">
-            <span class="time">15:00</span>: <b><i>Invited talk:</b></i>Alessandra Palmigiano. <i>Categories & categorization</i>
-        </div>
-        <div class="session">
-            <span class="time">16:00</span>: Sergio Marcelino.
-            <i>"Comparing finite many-valued logics via WSkS".</i>
-        </div>
-        <div class="session">
-            <span class="time">16:30</span>: <b>Coffee break.</b>
-        </div>
-        <div class="session">
-            <span class="time">17:00</span>: Muñoz Miguel Pérez.
-            <i>"Four-valued logics of indicative conditionals".</i>
-        </div>
-        <div class="session">
-            <span class="time">17:20</span>: Suene Duarte, Daniel Figueiredo, Manuel Martins, Regivan Santiago.
-            <i>"Dynamic Fuzzy Language for Label Fuzzy Reactive Graphs".</i>
-        </div>
-        <div class="session">
-            <span class="time">17:40</span>: Manisha Jain, Alexandre Madeira, Luís Barbosa.
-            <i>"Reasoning about blurred observations of program states: A recipe".</i>
-        </div>
-        <div class="session">
-            <span class="time">18:00</span>: Antonio Castro Iglesias, Alexandre Madeira, Manuel Martins.
-            <i>"A HASKELL encoding for reconfigurable timed systems".</i>
-        </div>
-        <div class="session">
-            <span class="time">18:20</span>: Closing
-        </div>
-        <div class="session">
-            <span class="time">20:30</span>: <b>Workshop dinner</b>:
-            in <i>Hacienda del Cardenal</i> - in the city center (<a href="https://www.haciendadelcardenal.com/">link<a>).
-        </div>
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <div class="card">
+            <div class="card-header text-white bg-dark"><strong>Afternoon</strong></div>
+            <div class="card-block bg-light committee">
+                <div class="session">
+                    <span class="time">15:00</span>: <b><i>Invited talk:</b> </i>Alessandra Palmigiano. <i><a href="/2025/invited-talks#alessandrapalmigiano">Categories & categorization</a></i>
+                </div>
+                <div class="session">
+                    <span class="time">16:00</span>: Sergio Marcelino.
+                    <i>"Comparing finite many-valued logics via WSkS".</i>
+                </div>
+                <div class="session">
+                    <span class="time">16:30</span>: <b>Coffee break.</b>
+                </div>
+                <div class="session">
+                    <span class="time">17:00</span>: Muñoz Miguel Pérez.
+                    <i>"Four-valued logics of indicative conditionals".</i>
+                </div>
+                <div class="session">
+                    <span class="time">17:20</span>: Suene Duarte, Daniel Figueiredo, Manuel Martins, Regivan Santiago.
+                    <i>"Dynamic Fuzzy Language for Label Fuzzy Reactive Graphs".</i>
+                </div>
+                <div class="session">
+                    <span class="time">17:40</span>: Manisha Jain, Alexandre Madeira, Luís Barbosa.
+                    <i>"Reasoning about blurred observations of program states: A recipe".</i>
+                </div>
+                <div class="session">
+                    <span class="time">18:00</span>: Antonio Castro Iglesias, Alexandre Madeira, Manuel Martins.
+                    <i>"A HASKELL encoding for reconfigurable timed systems".</i>
+                </div>
+                <div class="session">
+                    <span class="time">18:20</span>: Closing
+                </div>
+                <div class="session">
+                    <span class="time">20:30</span>: <b>Workshop dinner</b>:
+                    in <i>Hacienda del Cardenal</i> - in the city center (<a href="https://www.haciendadelcardenal.com/">link<a>).
+                </div>
+            </div>
+        </div> 
     </div>
+</div>
 
-</body>
-</html>
+<!-- <div class="day-schedule">
+    <h6 class="text-info">Morning</h6>
+    <div class="session">
+        <span class="time">9:30</span>: <i><b>Registration:</b> </i>in front of <i>"Sala de música"</i> (San Pedro Mártir Building).
+    </div>
+    <div class="session">
+        <span class="time">10:00</span>: <i><b>Invited talk:</b></i> Amanda Vidal. <i>"TBD"</i>
+    </div>
+    <div class="session">
+        <span class="time">11:00</span>: <b>Coffee break.</b>
+    </div>
+    <div class="session">
+        <span class="time">11:30</span>: Daniel Figueiredo, Manuel Martins, Raul Fervari.
+        <i>"Probabilistic Relation-Changing Operators".</i>
+    </div>
+    <div class="session">
+        <span class="time">12:00</span>: Lorenzo Capra, Marco Gribaudo.
+        <i>"Reconfigurable stochastic multi-formalism models: an approach based on Maude".</i>
+    </div>
+    <div class="session">
+        <span class="time">12:30</span>: Markus Krahl, Matthias Güdemann, Stefan Wallentowitz.
+        <i>"goLoop: SMT-Based Loop Analysis via Global Optimization".</i>
+    </div>
+    <div class="session">
+        <span class="time">13:00</span>: <b>Lunch:</b> in <i>La Fábrica de Harinas</i> - 10 min walk (<a href="https://www.hotelsanjuandelosreyes.com/es/la-fabrica-de-harinas">link<a>).
+    </div>
+</div>
+
+<div class="day-schedule">
+    <h6 class="text-info">Afternoon</h6>
+    <div class="session">
+        <span class="time">15:00</span>: <b><i>Invited talk:</b></i>Alessandra Palmigiano. <i>Categories & categorization</i>
+    </div>
+    <div class="session">
+        <span class="time">16:00</span>: Sergio Marcelino.
+        <i>"Comparing finite many-valued logics via WSkS".</i>
+    </div>
+    <div class="session">
+        <span class="time">16:30</span>: <b>Coffee break.</b>
+    </div>
+    <div class="session">
+        <span class="time">17:00</span>: Muñoz Miguel Pérez.
+        <i>"Four-valued logics of indicative conditionals".</i>
+    </div>
+    <div class="session">
+        <span class="time">17:20</span>: Suene Duarte, Daniel Figueiredo, Manuel Martins, Regivan Santiago.
+        <i>"Dynamic Fuzzy Language for Label Fuzzy Reactive Graphs".</i>
+    </div>
+    <div class="session">
+        <span class="time">17:40</span>: Manisha Jain, Alexandre Madeira, Luís Barbosa.
+        <i>"Reasoning about blurred observations of program states: A recipe".</i>
+    </div>
+    <div class="session">
+        <span class="time">18:00</span>: Antonio Castro Iglesias, Alexandre Madeira, Manuel Martins.
+        <i>"A HASKELL encoding for reconfigurable timed systems".</i>
+    </div>
+    <div class="session">
+        <span class="time">18:20</span>: Closing
+    </div>
+    <div class="session">
+        <span class="time">20:30</span>: <b>Workshop dinner</b>:
+        in <i>Hacienda del Cardenal</i> - in the city center (<a href="https://www.haciendadelcardenal.com/">link<a>).
+    </div>
+</div> -->
+
 
 
 <!--- <!DOCTYPE html>
