updated room for ReacTS

--- a/program.html
+++ b/program.html
@@ -38,7 +38,7 @@ slide_id: 4
 
 <h5>Preliminary program</h5>
 
-All talks will take place in <b>Room 1.0.7 (Madre de Dios Building of <a href="https://maps.app.goo.gl/EJNegwk8qtyRpMcc8">UCML</a>)</b>.
+All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href="https://maps.app.goo.gl/EJNegwk8qtyRpMcc8">UCML</a>)</del> Room 1.0.3 in San Pedro Mártir building (<a href="https://maps.app.goo.gl/EJNegwk8qtyRpMcc8">UCML</a>)</b>.
 
 
 <div class="row">
