--- a/program.html
+++ b/program.html
@@ -29,7 +29,7 @@ slide_id: 4
             color: #0056b3;
         }
         .card-block a {
-            color: #509e93;
+            color: #43988c;
         }
 </style>
 
@@ -46,28 +46,28 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
         <div class="card">
             <div class="card-header text-white bg-dark"><strong>Morning</strong></div>
             <div class="card-block bg-light committee">
-                    <div class="session">
+                    <div class="session sorganisation">
                         <span class="time">9:30</span>: <i><b>Registration:</b> </i>in front of <i>"Sala de música"</i> (San Pedro Mártir Building).
                     </div>
-                    <div class="session">
+                    <div class="session sinvited">
                         <span class="time">10:00</span>: <i><b>Invited talk:</b></i> Amanda Vidal. <i><a href="/2025/invited-talks#amandavidal">Between Necessity and Vagueness: Decidability in Modal Many-Valued Logics</a></i>
                     </div>
-                    <div class="session">
+                    <div class="session sorganisation">
                         <span class="time">11:00</span>: <b>Coffee break.</b>
                     </div>
-                    <div class="session">
+                    <div class="session stalk">
                         <span class="time">11:30</span>: Daniel Figueiredo, Manuel Martins, Raul Fervari.
                         <i>"Probabilistic Relation-Changing Operators".</i>
                     </div>
-                    <div class="session">
-                        <span class="time">12:00</span>: Lorenzo Capra, Marco Gribaudo.
-                        <i>"Reconfigurable stochastic multi-formalism models: an approach based on Maude".</i>
-                    </div>
-                    <div class="session">
+                    <div class="session stalk">
                         <span class="time">12:30</span>: Markus Krahl, Matthias Güdemann, Stefan Wallentowitz.
                         <i>"goLoop: SMT-Based Loop Analysis via Global Optimization".</i>
                     </div>
-                    <div class="session">
+                    <div class="session stalk">
+                        <span class="time">12:00</span>: Lorenzo Capra, Marco Gribaudo.
+                        <i>"Reconfigurable stochastic multi-formalism models: an approach based on Maude".</i>
+                    </div>
+                    <div class="session sorganisation">
                         <span class="time">13:00</span>: <b>Lunch:</b> in <i>La Fábrica de Harinas</i> - 10 min walk (<a href="https://www.hotelsanjuandelosreyes.com/es/la-fabrica-de-harinas">link<a>).
                     </div>
             </div>
@@ -78,36 +78,36 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
         <div class="card">
             <div class="card-header text-white bg-dark"><strong>Afternoon</strong></div>
             <div class="card-block bg-light committee">
-                <div class="session">
+                <div class="session sinvited">
                     <span class="time">15:00</span>: <b><i>Invited talk:</b> </i>Alessandra Palmigiano. <i><a href="/2025/invited-talks#alessandrapalmigiano">Categories & categorization</a></i>
                 </div>
-                <div class="session">
+                <div class="session stalk">
                     <span class="time">16:00</span>: Sergio Marcelino.
                     <i>"Comparing finite many-valued logics via WSkS".</i>
                 </div>
-                <div class="session">
+                <div class="session sorganisation">
                     <span class="time">16:30</span>: <b>Coffee break.</b>
                 </div>
-                <div class="session">
+                <div class="session stalk">
                     <span class="time">17:00</span>: Muñoz Miguel Pérez.
                     <i>"Four-valued logics of indicative conditionals".</i>
                 </div>
-                <div class="session">
+                <div class="session stalk">
                     <span class="time">17:20</span>: Suene Duarte, Daniel Figueiredo, Manuel Martins, Regivan Santiago.
                     <i>"Dynamic Fuzzy Language for Label Fuzzy Reactive Graphs".</i>
                 </div>
-                <div class="session">
+                <div class="session stalk">
                     <span class="time">17:40</span>: Manisha Jain, Alexandre Madeira, Luís Barbosa.
                     <i>"Reasoning about blurred observations of program states: A recipe".</i>
                 </div>
-                <div class="session">
+                <div class="session stalk">
                     <span class="time">18:00</span>: Antonio Castro Iglesias, Alexandre Madeira, Manuel Martins.
                     <i>"A HASKELL encoding for reconfigurable timed systems".</i>
                 </div>
-                <div class="session">
+                <div class="session sorganisation">
                     <span class="time">18:20</span>: Closing
                 </div>
-                <div class="session">
+                <div class="session sorganisation">
                     <span class="time">20:30</span>: <b>Workshop dinner</b>:
                     in <i>Hacienda del Cardenal</i> - in the city center (<a href="https://www.haciendadelcardenal.com/">link<a>).
                 </div>
