New small update to the program

--- a/program.html
+++ b/program.html
@@ -36,7 +36,7 @@ slide_id: 4
     <!-- <h6> <a href="https://drive.google.com/file/d/15h03jbHLptbDjOkeVrsaCYointsiMMl3/view?usp=sharing">Booklet of Constributions.</a></h6> -->
 
 
-<h5>Preliminary program</h5>
+<h5>Program</h5>
 
 All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href="https://maps.app.goo.gl/EJNegwk8qtyRpMcc8">UCML</a>)</del> Room 1.0.3 in San Pedro Mártir building (<a href="https://maps.app.goo.gl/EJNegwk8qtyRpMcc8">UCML</a>)</b>.
 
