adding session chairs

--- a/program.html
+++ b/program.html
@@ -21,15 +21,37 @@ slide_id: 4
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        .session {
-            margin-bottom: 15px;
+        .session{
+            padding-bottom: 8px;
+            padding-top: 8px;
+            padding-left: 4px;
+        }
+        .sorganisation {}
+        .sinvited {
+            background-color: #f6dce0;
+        }
+
+        .stalk {
+            background-color: #dcf0f6;
+        }
+        .schair {
+            background-color: #3a3a8b; /*darkblue*/
+            font-weight: bold;
+            color: white;
+            margin-top: 4px;
+            padding-top: 4px;
+            padding-bottom: 4px;
+        }
+        .schairinv {
+            background-color: #60364c;
         }
         .time {
             font-weight: bold;
             color: #0056b3;
         }
         .card-block a {
-            color: #43988c;
+            /*color: #43988c;*/
+            color: #0056b3;
         }
 </style>
 
@@ -49,12 +71,18 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                     <div class="session sorganisation">
                         <span class="time">9:30</span>: <i><b>Registration:</b> </i>in front of <i>"Sala de música"</i> (San Pedro Mártir Building).
                     </div>
+                    <div class="session sorganisation">
+                        <span class="time">10:00</span>:
+                        <b>Welcome to ReacTS:</b> José Proença & Umberto Rivieccio.
+                    </div>
+                    <div class="session schair schairinv">Session chair: Umberto Rivieccio</div>
                     <div class="session sinvited">
-                        <span class="time">10:00</span>: <i><b>Invited talk:</b></i> Amanda Vidal. <i><a href="/2025/invited-talks#amandavidal">Between Necessity and Vagueness: Decidability in Modal Many-Valued Logics</a></i>
+                        <span class="time">10:10</span>: <i><b>Invited talk:</b></i> Amanda Vidal. <i><a href="/2025/invited-talks#amandavidal">Between Necessity and Vagueness: Decidability in Modal Many-Valued Logics</a></i>
                     </div>
                     <div class="session sorganisation">
                         <span class="time">11:00</span>: <b>Coffee break.</b>
                     </div>
+                    <div class="session schair">Session chair: tba</div>
                     <div class="session stalk">
                         <span class="time">11:30</span>: Daniel Figueiredo, Manuel Martins, Raul Fervari.
                         <i>"Probabilistic Relation-Changing Operators".</i>
@@ -62,6 +90,7 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                     <div class="session stalk">
                         <span class="time">12:30</span>: Markus Krahl, Matthias Güdemann, Stefan Wallentowitz.
                         <i>"goLoop: SMT-Based Loop Analysis via Global Optimization".</i>
+                        (<a href="assets/slides/goLoop-slides.pptx">slides</a>)
                     </div>
                     <div class="session stalk">
                         <span class="time">12:00</span>: Lorenzo Capra, Marco Gribaudo.
@@ -78,16 +107,19 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
         <div class="card">
             <div class="card-header text-white bg-dark"><strong>Afternoon</strong></div>
             <div class="card-block bg-light committee">
+                <div class="session schair schairinv">Session chair: Umberto Rivieccio</div>
                 <div class="session sinvited">
                     <span class="time">15:00</span>: <b><i>Invited talk:</b> </i>Alessandra Palmigiano. <i><a href="/2025/invited-talks#alessandrapalmigiano">Categories & categorization</a></i>
                 </div>
+                <!-- <div class="session schair">Session chair: Umberto Rivieccio</div> -->
                 <div class="session stalk">
-                    <span class="time">16:00</span>: Sergio Marcelino.
+                    <span class="time">16:00</span>: Sérgio Marcelino.
                     <i>"Comparing finite many-valued logics via WSkS".</i>
                 </div>
                 <div class="session sorganisation">
                     <span class="time">16:30</span>: <b>Coffee break.</b>
                 </div>
+                <div class="session schair">Session chair: tba</div>
                 <div class="session stalk">
                     <span class="time">17:00</span>: Muñoz Miguel Pérez.
                     <i>"Four-valued logics of indicative conditionals".</i>
@@ -150,7 +182,7 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
         <span class="time">15:00</span>: <b><i>Invited talk:</b></i>Alessandra Palmigiano. <i>Categories & categorization</i>
     </div>
     <div class="session">
-        <span class="time">16:00</span>: Sergio Marcelino.
+        <span class="time">16:00</span>: Sérgio Marcelino.
         <i>"Comparing finite many-valued logics via WSkS".</i>
     </div>
     <div class="session">
@@ -249,7 +281,7 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
     <div class="talk">
         <div class="title">Logics for path-dependent systems: from reactive to switch frames and beyond
         </div>
-        <div class="speaker">Sergio Marcelino</div>
+        <div class="speaker">Sérgio Marcelino</div>
         <div class="affiliation">IT & Dep. Mathematics IST, University of Lisbon, Portugal </div>
         <div class="abstract">
             <strong>Abstract:</strong> 
