--- a/program.html
+++ b/program.html
@@ -82,7 +82,7 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                     <div class="session sorganisation">
                         <span class="time">11:00</span>: <b>Coffee break.</b>
                     </div>
-                    <div class="session schair">Session chair: tba</div>
+                    <div class="session schair">Session chair: Alexandre Madeira</div>
                     <div class="session stalk">
                         <span class="time">11:30</span>: Daniel Figueiredo, Manuel Martins, Raul Fervari.
                         <i>"Probabilistic Relation-Changing Operators".</i>
@@ -90,7 +90,8 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                     <div class="session stalk">
                         <span class="time">12:30</span>: Markus Krahl, Matthias Güdemann, Stefan Wallentowitz.
                         <i>"goLoop: SMT-Based Loop Analysis via Global Optimization".</i>
-                        (<a href="assets/slides/goLoop-slides.pptx">slides</a>)
+                        (<a href="assets/slides/goLoop-slides.pptx">slides</a>, <a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=21">pre-print</a>)
+
                     </div>
                     <div class="session stalk">
                         <span class="time">12:00</span>: Lorenzo Capra, Marco Gribaudo.
@@ -111,7 +112,7 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                 <div class="session sinvited">
                     <span class="time">15:00</span>: <b><i>Invited talk:</b> </i>Alessandra Palmigiano. <i><a href="/2025/invited-talks#alessandrapalmigiano">Categories & categorization</a></i>
                 </div>
-                <!-- <div class="session schair">Session chair: Umberto Rivieccio</div> -->
+                <div class="session schair">Session chair: Manuel Martins</div>
                 <div class="session stalk">
                     <span class="time">16:00</span>: Sérgio Marcelino.
                     <i>"Comparing finite many-valued logics via WSkS".</i>
@@ -119,7 +120,7 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                 <div class="session sorganisation">
                     <span class="time">16:30</span>: <b>Coffee break.</b>
                 </div>
-                <div class="session schair">Session chair: tba</div>
+                <div class="session schair">Session chair: Sérgio Marcelino</div>
                 <div class="session stalk">
                     <span class="time">17:00</span>: Muñoz Miguel Pérez.
                     <i>"Four-valued logics of indicative conditionals".</i>
